Fix: fix to Page stretching phenomenon

--- a/app/_components/common/header/header.module.scss
+++ b/app/_components/common/header/header.module.scss
@@ -41,7 +41,7 @@
 }
 
 .title {
-  position: absolute;
+  position: relative;
   width: 100%;
   margin: 0 auto;
   z-index: 10;
