--- a/app/_components/common/modal/modal.module.scss
+++ b/app/_components/common/modal/modal.module.scss
@@ -16,6 +16,8 @@
 
 .modal {
   width: calc(100% - 32px);
+  max-width: 430px;
+  margin: 0 16px;
   padding: 16px;
   background: #ffffff;
   display: flex;
